# desktop_games

./: .gitignore  Cargo.toml  LICENSE  Makefile  MakefileLinux  MakefileWindows  README.md  build_linux.sh  build_mac.sh  build_windows.sh  linux_runner.sh  tiles
.cargo/: config
allhands/: Cargo.toml  build.rs  chrome
allhands/src/: main.rs
archaeologist/: Cargo.toml  build.rs  cursor  cursor_down  tiles
archaeologist/src/: main.rs
bellum/: Cargo.toml
bellum/src/: main.rs
box-factory/: Cargo.toml  movable_block2
box-factory/src/: main.rs
brooklyn/: Cargo.toml  lose  pipes
brooklyn/src/: main.rs
corbynball/: Cargo.toml  build.rs  cursor_h  cursor_v  level_splash  lose  paused_splash  tiles  wbs
corbynball/src/: main.rs
cylons/: Cargo.toml
cylons/src/: main.rs
gatchi/: Cargo.toml  block_hl  block_i  block_z  gatchi_icon  gatchi_lose  gatchi_won
gatchi/src/: main.rs
grenadier/: Cargo.toml  explosion  explosion_b  explosion_e  explosion_ew  explosion_n  explosion_ns  explosion_s  explosion_w  garbage_block  level1  level_exit  level_exit_locked  level_splash  movable_block  paused_splash  pu_1up  pu_bomb  pu_inv  pu_kick  pu_pass  pu_radius  pu_remote  pu_speed
grenadier/src/: main.rs
ishi/: Cargo.toml  win
ishi/src/: main.rs
jackpot/: Cargo.toml  chrome_overlay  slots_chrome
jackpot/src/: main.rs
mageja/: Cargo.toml  build.rs  win
mageja/levels/: 1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  3  4  5  6  7  8  9
mageja/src/: main.rs
micro-chess/: Cargo.toml
micro-chess/src/: main.rs
peggy/: Cargo.toml  lose  win
peggy/src/: main.rs
rx/: Cargo.toml  build.rs  chrome
rx/src/: drawing.rs  imprint.rs  main.rs
rx/src/game/: mod.rs  piece.rs  score_table.rs
sand/: Cargo.toml  build.rs
sand/src/: main.rs
solitude/: Cargo.toml  build.rs  tiles  win
solitude/src/: main.rs  rules.rs
soyuz/: Cargo.toml  block_hl  block_j  block_l  block_o  block_s  block_t  chrome  tiles
soyuz/src/: drawing.rs  imprint.rs  main.rs
soyuz/src/game/: mod.rs  piece.rs  score_table.rs
tainan/: Cargo.toml  win
tainan/src/: main.rs
taipan/: Cargo.toml  garbage_block  head_e  head_n  head_s  head_w  level2  level3  level4  level5  level6  level7  straight_e  straight_n  straight_s  straight_w  tail_e  tail_n  tail_s  tail_w  tl_e  tl_n  tl_s  tl_w
taipan/src/: main.rs
upto11/: Cargo.toml  win
upto11/src/: main.rs
utils/: Cargo.toml
utils/src/: color.rs  framerate.rs  lib.rs  menu.rs
vermin/: Cargo.toml  level2  level3  movable_block2
vermin/src/: main.rs
vexation/: Cargo.toml  tetravex
vexation/src/: main.rs  rules.rs
