[workspace]
members = [
    "utils",
    "box-factory",
    "micro-chess",
    "archaeologist",
    "solitude",
    "soyuz",
    "mageja",
    "corbynball",
    "cylons",
    "vermin",
    "taipan",
    "upto11",
    "gatchi",
    "vexation",
    "jackpot",
    "allhands",
    "tainan",
    "ishi",
    "brooklyn"
]
