[workspace]
members = [
    "utils",
    "box-factory",
    "micro-chess",
    "peggy",
    "archaeologist",
    "solitude",
    "soyuz",
    "mageja",
    "corbynball",
    "cylons",
    "vermin",
    "taipan",
    "upto11",
    "gatchi",
    "vexation",
    "jackpot",
    "allhands",
    "tainan",
    "ishi",
    "brooklyn"
]
