[package]
name = "ishi"
version = "0.1.0"
authors = ["Liam O’Connor <liamoc@cse.unsw.edu.au>"]
edition = "2018"
description = "A Stones clone."

[dependencies]
tesserae="0.3.1"
rand="0.7.3"
[dependencies.sdl2]
version = "0.33.0"
default-features = false
features = ["use_mac_framework","gfx"]

[dependencies.utils]
path = "../utils"

[package.metadata.bundle]
name="Ishi"
identifier="net.liamoc.ishi"
icon=["icon@2x.png"]
version="0.1"
copyright="Liam O'Connor 2021"
category="public.app-category.puzzle-games"
short_description="A Stones clone"
osx_minimum_system_version="10.13.3"
osx_frameworks=["SDL2", "SDL2_gfx"]
deb_depends=["libsdl2-2.0-0 (>= 2.0.9)", "libsdl2-gfx-1.0-0 (>= 1.0.4)"]
