[package]
name = "micro-chess"
version = "0.1.1"
authors = ["Liam O’Connor <liamoc@cse.unsw.edu.au>"]
edition = "2018"
description = "A Chess clone."

[dependencies]
tesserae="0.3.1"
rand="*"

[dependencies.littlewing]
path="../../littlewing"

[dependencies.sdl2]
version = "0.33.0"
default-features = false
features = ["use_mac_framework"]

[dependencies.utils]
path = "../utils"

[package.metadata.bundle]
name="Micro Chess"
identifier="net.liamoc.micro-chess"
icon=["icon@2x.png"]
version="0.1"
copyright="Liam O'Connor 2020"
category="public.app-category.puzzle-games"
short_description="A Chess clone"
osx_minimum_system_version="10.13.3"
osx_frameworks=["SDL2"]
deb_depends=["libsdl2-2.0-0 (>= 2.0.9)"]
